manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-flag
  labels:
    app.kubernetes.io/name: flag-service
    app.kubernetes.io/component: flag
    app.kubernetes.io/part-of: togglemaster
