manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: togglemaster-flag
  labels:
    app.kubernetes.io/name: flag-service
    app.kubernetes.io/component: flag
    app.kubernetes.io/part-of: togglemaster
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: flag-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flag-service
        app.kubernetes.io/component: flag
        app.kubernetes.io/part-of: togglemaster
    spec:
      containers:
        - name: flag-service
          image: 637423306132.dkr.ecr.us-east-1.amazonaws.com/togglemaster/flag-service:a30447fd700583a5822485f1a64f41bf36b063e6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8002
              protocol: TCP
          command: ["/bin/sh", "-c"]
          args:
            - |
              export DATABASE_URL=$(cat /shared/database_url)
              exec gunicorn --bind 0.0.0.0:8002 --workers 2 --threads 2 app:app
          volumeMounts:
            - name: shared-data
              mountPath: /shared
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi

      volumes:
        - name: shared-data
          emptyDir: {}
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: flag-service
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
